--- a/index.html
+++ b/index.html
@@ -12,15 +12,29 @@
 </head>
 
 <body>
+    <div class="control-panel flex align-center space-between">
+        <label for="fill-color">
+            fill color:
+            <input type="color" name="fill-color">
+        </label>
+        <label for="stroke-color">
+            stroke color:
+            <input type="color" name="stroke-color">
+        </label>
+        <select name="shape" onchange="onChangeShape(this.value)">
+            <option value="rectangle">Rectangle</option>
+            <option value="rectangle">Oval</option>
+        </select>
+        
+    </div>
     <div class="canvas-container">
         <canvas style="width: 100vw; height: 100vh"></canvas>
     </div>
     <script src="js/util.js"></script>
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/bootstrap/bootstrap.js"></script>
-    <script src="js/app-service-model.js"></script>
-    <script src="js/app-service.js"></script>
-    <script src="js/canvas.js"></script>
+    <script src="js/canvas-service.js"></script>
+    <script src="js/canvas-controller.js"></script>
 </body>
 
 </html>
