--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/bootstrap/bootstrap.js"></script>
     <script src="js/app-service-model.js"></script>
-    <script src="js/app-service.js"></script>
-    <script src="js/canvas.js"></script>
+    <script src="js/canvas-service.js"></script>
+    <script src="js/canvas-controller.js"></script>
 </body>
 
 </html>
