--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
     </div>
     <div class="canvas-container">
-        <canvas id="our-canvas"  width="500" height="400" style="border:1px solid black" onclick="onCanvasClick(event)"></canvas>
+        <canvas id="our-canvas"  width="500" height="400" style="border:1px solid black" onmousedown="onCanvasMouseDown(event)" onmouseup="onCanvasMouseUp(event)"></canvas>
     </div>
     <script src="js/util.js"></script>
     <script src="lib/jquery/jquery.js"></script>
