--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <option value="rectangle">Rectangle</option>
             <option value="oval">Oval</option>
         </select>
-        
+        <button onclick="clearCanvas()">Clear</button>
     </div>
     <div class="canvas-container">
         <canvas id="our-canvas"  width="500" height="400" style="border:1px solid black" onmousedown="onCanvasMouseDown(event)" onmouseup="onCanvasMouseUp(event)"></canvas>
