--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <option value="rectangle">Rectangle</option>
             <option value="oval">Oval</option>
         </select>
+        <a href="" type="button" onclick="downloadCanvas(this)">Save</a>
         
     </div>
     <div class="canvas-container">
