css changes and download functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>page title</title>
-    <link rel="stylesheet" href="lib/bootstrap/bootstrap.css" />
+    <!-- <link rel="stylesheet" href="lib/bootstrap/bootstrap.css" /> -->
     <link rel="stylesheet" href="lib/animate/animate.css" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -27,7 +27,7 @@
             <option value="rectangle">Rectangle</option>
             <option value="oval">Oval</option>
         </select>
-        <a href="" type="button" onclick="downloadCanvas(this)">Save</a>
+       <div class="save"> <a href="" class="a-save" type="button" onclick="downloadCanvas(this)">Save</a></div>
         
     </div>
     <div class="canvas-container">
