--- a/index.html
+++ b/index.html
@@ -17,20 +17,27 @@
             stroke color:
             <input type="color" name="stroke-color" value="#000000" onchange="onStrokeColorChange(this)">
         </label>
+        <span class="opacity-label"></span>
+        <input type="range" name="opacity" min="0" max="100" onchange="onOpacityChange(this)"
+            class="opacity">
         <label for="fill-color">
             fill color:
             <input type="color" name="fill-color" value="#ffffff" onchange="onFillColorChange(this)">
         </label>
-            <span class="stroke-width-label"></span>
-            <input type="range" name="stroke-width" min="1" max="30" onchange="onStrokeWidthChange(this)" class="stroke-width">
+        <span class="stroke-width-label"></span>
+        <input type="range" name="stroke-width" min="1" max="30" onchange="onStrokeWidthChange(this)"
+            class="stroke-width">
         <select name="shape" onchange="onShapeChange(this)">
             <option value="rectangle">Rectangle</option>
             <option value="oval">Oval</option>
+            <option value="brush">Brush</option>
         </select>
         <button onclick="clearCanvas()">Clear</button>
     </div>
     <div class="canvas-container">
-        <canvas id="our-canvas"  width="500" height="400" style="border:1px solid black" onmousedown="onCanvasMouseDown(event)" onmouseup="onCanvasMouseUp(event)"></canvas>
+        <canvas id="our-canvas" width="500" height="400" style="border:1px solid black"
+            onmousedown="onCanvasMouseDown(event)" onmouseup="onCanvasMouseUp(event)"
+            onmousemove="onMouseMove(event)"></canvas>
     </div>
     <script src="js/util.js"></script>
     <script src="lib/jquery/jquery.js"></script>
